cover z-index fix

--- a/input.scss
+++ b/input.scss
@@ -64,7 +64,7 @@ body.dark {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background: var(--bg-tertiary) var(--bg-texture);
