--- a/minatodossier.css
+++ b/minatodossier.css
@@ -53,7 +53,7 @@ body.dark #minato-dossier {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background: var(--bg-tertiary) var(--bg-texture);
